--- a/build.gradle
+++ b/build.gradle
@@ -25,10 +25,37 @@ repositories {
 }
 
 dependencies {
-	implementation 'org.springframework.boot:spring-boot-starter'
+	// 1. Web & Validation (API 서버용 필수)
+	// 주의: 단순 starter가 아니라 'starter-web'이어야 Tomcat이 실행됩니다.
+	implementation 'org.springframework.boot:spring-boot-starter-web'
+	implementation 'org.springframework.boot:spring-boot-starter-validation'
+
+	// 2. Database (MySQL + JPA)
+	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+	runtimeOnly 'com.mysql:mysql-connector-j'
+
+	// 3. Apache Kafka (메시지 큐)
+	implementation 'org.springframework.kafka:spring-kafka'
+
+	// 4. 유틸리티 (RSS, Swagger, JSON)
+	// RSS 파싱 (Rome 라이브러리)
+	implementation 'com.rometools:rome:1.18.0'
+
+	// API 문서화 (Swagger UI) -> http://localhost:8080/swagger-ui/index.html
+	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.3.0'
+
+	// MySQL JSON 타입 매핑 유틸 (JPA에서 JSON 쉽게 쓰기 위함)
+	implementation 'io.hypersistence:hypersistence-utils-hibernate-63:3.7.3'
+
+	// 5. Lombok
 	compileOnly 'org.projectlombok:lombok'
 	annotationProcessor 'org.projectlombok:lombok'
+
+	implementation 'io.github.cdimascio:dotenv-java:3.0.0'
+
+	// 6. Test
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
+	testImplementation 'org.springframework.kafka:spring-kafka-test'
 	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
 }
 
