--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,32 @@
 spring.application.name=TrendStream
+
+spring.config.import=optional:file:.env[.properties]
+
+# 1. MySQL ?? (???? ??)
+spring.datasource.url=jdbc:mysql://localhost:3307/trend_stream?serverTimezone=Asia/Seoul&characterEncoding=UTF-8
+spring.datasource.username=root
+spring.datasource.password=${DB_PASSWORD}
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+# 2. JPA ??
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+
+# 3. Kafka ??
+spring.kafka.bootstrap-servers=localhost:9092
+spring.kafka.consumer.group-id=news-group
+spring.kafka.consumer.auto-offset-reset=latest
+spring.kafka.consumer.key-deserializer=org.apache.kafka.common.serialization.StringDeserializer
+spring.kafka.consumer.value-deserializer=org.apache.kafka.common.serialization.StringDeserializer
+spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.StringSerializer
+spring.kafka.producer.value-serializer=org.apache.kafka.common.serialization.StringSerializer
+
+# 4. Naver News API ??
+naver.api.client-id=${NAVER_CLIENT_ID}
+naver.api.client-secret=${NAVER_CLIENT_SECRET}
+naver.api.url=https://openapi.naver.com/v1/search/news.json
+
+# 5. Gemini API ??
+gemini.api.key=${GEMINI_API_KEY}
