--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,32 +1,27 @@
 spring.application.name=TrendStream
 
-spring.config.import=optional:file:.env[.properties]
-
-# 1. MySQL ?? (???? ??)
+# 1. MySQL 설정
 spring.datasource.url=jdbc:mysql://localhost:3307/trend_stream?serverTimezone=Asia/Seoul&characterEncoding=UTF-8
 spring.datasource.username=root
 spring.datasource.password=${DB_PASSWORD}
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
-# 2. JPA ??
+# 2. JPA 설정
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+spring.jpa.open-in-view=false
 
-# 3. Kafka ??
-spring.kafka.bootstrap-servers=localhost:9092
-spring.kafka.consumer.group-id=news-group
-spring.kafka.consumer.auto-offset-reset=latest
-spring.kafka.consumer.key-deserializer=org.apache.kafka.common.serialization.StringDeserializer
-spring.kafka.consumer.value-deserializer=org.apache.kafka.common.serialization.StringDeserializer
-spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.StringSerializer
-spring.kafka.producer.value-serializer=org.apache.kafka.common.serialization.StringSerializer
-
-# 4. Naver News API ??
+# 4. 외부 API 키 설정
 naver.api.client-id=${NAVER_CLIENT_ID}
 naver.api.client-secret=${NAVER_CLIENT_SECRET}
 naver.api.url=https://openapi.naver.com/v1/search/news.json
-
-# 5. Gemini API ??
 gemini.api.key=${GEMINI_API_KEY}
+
+# 5. [필수] 서버 네트워크 설정 (Bad address 해결용)
+server.address=0.0.0.0
+server.port=8081
+
+# .env 파일 로딩 설정
+spring.config.import=optional:file:.env[.properties]
