--- a/build.gradle
+++ b/build.gradle
@@ -62,3 +62,12 @@ dependencies {
 tasks.named('test') {
 	useJUnitPlatform()
 }
+
+// UTF-8 인코딩 설정 추가
+tasks.withType(JavaCompile) {
+	options.encoding = 'UTF-8'
+}
+
+bootRun {
+	systemProperty 'file.encoding', 'UTF-8'
+}
