--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,31 +4,43 @@ services:
   mysql:
     image: mysql:8.0
     container_name: trend_mysql
+    restart: always
     environment:
       MYSQL_ROOT_PASSWORD: mytrendStreampw
-      MYSQL_DATABASE: trend_stream  # 여기서 DB를 미리 만들어줍니다!
+      MYSQL_DATABASE: trend_stream
     ports:
       - "3307:3306"
     volumes:
       - mysql_data:/var/lib/mysql
     command: --character-set-server=utf8mb4 --collation-server=utf8mb4_unicode_ci
+    healthcheck:
+      test: ["CMD", "mysqladmin" ,"ping", "-h", "localhost"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
 
-  # 2. Zookeeper (Kafka 관리자)
   zookeeper:
     image: confluentinc/cp-zookeeper:7.5.0
     container_name: trend_zookeeper
+    restart: always
     environment:
       ZOOKEEPER_CLIENT_PORT: 2181
       ZOOKEEPER_TICK_TIME: 2000
     ports:
-      - "2181:2181"
+      - "2121:2181"
+    healthcheck:
+      test: ["CMD-SHELL", "cub zk-ready zookeeper:2181 30"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
 
-  # 3. Kafka (메시지 큐)
   kafka:
     image: confluentinc/cp-kafka:7.5.0
     container_name: trend_kafka
+    restart: always
     depends_on:
-      - zookeeper
+      zookeeper:
+        condition: service_healthy
     ports:
       - "9092:9092"
     environment:
@@ -37,14 +49,19 @@ services:
       KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://kafka:29092,PLAINTEXT_HOST://localhost:9092
       KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: PLAINTEXT:PLAINTEXT,PLAINTEXT_HOST:PLAINTEXT
       KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 1
+    healthcheck:
+      test: ["CMD-SHELL", "cub broker-ready -b kafka:29092 1 30"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
 
-  # 4. Kafka UI (눈으로 보는 관리 도구)
   kafka-ui:
     image: provectuslabs/kafka-ui:latest
     container_name: trend_kafka_ui
+    restart: always
     depends_on:
-      - kafka
-      - zookeeper
+      kafka:
+        condition: service_healthy
     ports:
       - "8080:8080"
     environment:
