--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,10 +17,11 @@ spring.jpa.open-in-view=false
 naver.api.client-id=${NAVER_CLIENT_ID}
 naver.api.client-secret=${NAVER_CLIENT_SECRET}
 naver.api.url=https://openapi.naver.com/v1/search/news.json
+naver.api.keywords=백엔드,AI,클라우드,자바,여기어때
 gemini.api.key=${GEMINI_API_KEY}
 
 # 5. [필수] 서버 네트워크 설정 (Bad address 해결용)
-server.address=0.0.0.0
+server.address=localhost
 server.port=8081
 
 # .env 파일 로딩 설정
