--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -20,7 +20,18 @@ naver.api.url=https://openapi.naver.com/v1/search/news.json
 naver.api.keywords=백엔드,AI,클라우드,자바,여기어때
 gemini.api.key=${GEMINI_API_KEY}
 
-# 5. [필수] 서버 네트워크 설정 (Bad address 해결용)
+# AI 분석 설정 (groq, gemini, ollama)
+ai.provider=groq
+ai.analysis.interval=10000
+groq.api.key=${GROQ_API_KEY}
+groq.model=llama-3.1-8b-instant
+ollama.api.url=http://localhost:11434
+ollama.model=gemma3:1b
+
+# 5. CORS 설정
+cors.allowed-origins=${CORS_ALLOWED_ORIGINS:http://localhost:3000}
+
+# 6. [필수] 서버 네트워크 설정 (Bad address 해결용)
 server.address=localhost
 server.port=8081
 
