--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,7 +17,7 @@ spring.jpa.open-in-view=false
 naver.api.client-id=${NAVER_CLIENT_ID}
 naver.api.client-secret=${NAVER_CLIENT_SECRET}
 naver.api.url=https://openapi.naver.com/v1/search/news.json
-naver.api.keywords=백엔드,AI,클라우드,자바,여기어때
+naver.api.keywords=\uBC31\uC5D4\uB4DC,AI,\uD074\uB77C\uC6B0\uB4DC,\uC790\uBC14,\uC5EC\uAE30\uC5B4\uB54C
 gemini.api.key=${GEMINI_API_KEY}
 
 # AI 분석 설정 (groq, gemini, ollama)
