Add subscriptions, notifications, stats & Redis
Introduce subscription, notification and statistics features with Redis-backed notification queue and caching. Changes include:

- Add Redis support: build.gradle dependency, docker-compose Redis service, and RedisConfig bean.
- NotificationService: Redis-based dedupe + queue and logging-based send flow.
- Subscription API: SubscriptionController, DTOs, SubscriptionService (added files) and JPA entities (User, Subscription) + SubscriptionRepository.
- Stats API: StatsController, StatsService, NewsStats entity and NewsStatsRepository with queries for hourly/daily/source aggregates.
- News improvements: NewsController new endpoints (/source, /sources), NewsRepository queries for source listing and findBySource, and NewsService methods to support them.
- Kafka tuning: increased MAX_POLL_RECORDS and listener concurrency/idle tweaks for higher throughput.
- Package refactor: move AI-related services into service.ai package imports updated.
- Add utility classes (HtmlUtils, SpamFilter) and many producer/consumer skeletons; updated application.properties and extended README with architecture and usage docs.

These changes add end-to-end support for keyword subscriptions, queued notifications, and aggregated statistics for dashboard/trends, and improve throughput for Kafka consumers.

--- a/build.gradle
+++ b/build.gradle
@@ -37,6 +37,9 @@ dependencies {
 	// 3. Apache Kafka (메시지 큐)
 	implementation 'org.springframework.kafka:spring-kafka'
 
+	// 4. Redis (알림 큐, 캐싱)
+	implementation 'org.springframework.boot:spring-boot-starter-data-redis'
+
 	// 4. 유틸리티 (RSS, Swagger, JSON)
 	// RSS 파싱 (Rome 라이브러리)
 	implementation 'com.rometools:rome:1.18.0'
