--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -28,7 +28,11 @@ groq.model=llama-3.1-8b-instant
 ollama.api.url=http://localhost:11434
 ollama.model=gemma3:1b
 
-# 5. CORS 설정
+# 5. Redis 설정
+spring.data.redis.host=localhost
+spring.data.redis.port=6379
+
+# 6. CORS 설정
 cors.allowed-origins=${CORS_ALLOWED_ORIGINS:http://localhost:3000}
 
 # 6. [필수] 서버 네트워크 설정 (Bad address 해결용)
