Add prod deploy, email notifications, cleanup
Add production deployment and maintenance features: new Dockerfile, .dockerignore, Caddyfile, docker-compose (deploy and prod) and deploy/.env.example for containerized deployment and reverse proxy. Enable email notifications and health checks by adding spring-boot-mail and actuator deps, Mail config in application(-prod).properties, and NotificationService updated to send HTML emails via JavaMailSender with @Async and Redis-based dedupe. Add scheduling support (@EnableAsync, @EnableScheduling) and a DataCleanupScheduler plus NewsRepository methods to count/delete old news for automated retention cleanup. Misc: minor config updates (Kafka/Redis DB endpoints) and build changes to support production build.

--- a/build.gradle
+++ b/build.gradle
@@ -40,6 +40,12 @@ dependencies {
 	// 4. Redis (알림 큐, 캐싱)
 	implementation 'org.springframework.boot:spring-boot-starter-data-redis'
 
+	// 5. Mail (이메일 발송)
+	implementation 'org.springframework.boot:spring-boot-starter-mail'
+
+	// 6. Actuator (헬스체크)
+	implementation 'org.springframework.boot:spring-boot-starter-actuator'
+
 	// 4. 유틸리티 (RSS, Swagger, JSON)
 	// RSS 파싱 (Rome 라이브러리)
 	implementation 'com.rometools:rome:1.18.0'
