--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -1,38 +1,49 @@
+# Production Configuration
 spring.application.name=TrendStream
 
-# 1. MySQL 설정
-spring.datasource.url=jdbc:mysql://localhost:3307/trend_stream?serverTimezone=Asia/Seoul&characterEncoding=UTF-8
+# 1. MySQL 설정 (Docker 내부 네트워크)
+spring.datasource.url=jdbc:mysql://db:3306/trend_stream?serverTimezone=Asia/Seoul&characterEncoding=UTF-8
 spring.datasource.username=root
 spring.datasource.password=${DB_PASSWORD}
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 # 2. JPA 설정
 spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.show-sql=false
+spring.jpa.properties.hibernate.format_sql=false
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.open-in-view=false
+
+# 3. Kafka 설정 (Docker 내부 네트워크)
+spring.kafka.bootstrap-servers=kafka:9092
 
 # 4. 외부 API 키 설정
 naver.api.client-id=${NAVER_CLIENT_ID}
 naver.api.client-secret=${NAVER_CLIENT_SECRET}
 naver.api.url=https://openapi.naver.com/v1/search/news.json
-naver.api.keywords=\uBC31\uC5D4\uB4DC,AI,\uD074\uB77C\uC6B0\uB4DC,\uC790\uBC14,\uC5EC\uAE30\uC5B4\uB54C
-gemini.api.key=${GEMINI_API_KEY}
+naver.api.keywords=백엔드,AI,클라우드,자바,여기어때
 
-# AI 분석 설정 (groq, gemini, ollama)
-ai.provider=groq
+# AI 분석 설정
+ai.provider=${AI_PROVIDER:groq}
 ai.analysis.interval=10000
+gemini.api.key=${GEMINI_API_KEY}
 groq.api.key=${GROQ_API_KEY}
 groq.model=llama-3.1-8b-instant
-ollama.api.url=http://localhost:11434
+ollama.api.url=http://ollama:11434
 ollama.model=gemma3:1b
 
-# 5. Redis 설정
-spring.data.redis.host=localhost
+# 5. Redis 설정 (Docker 내부 네트워크)
+spring.data.redis.host=redis
 spring.data.redis.port=6379
 
-# 7. Mail 설정 (Gmail SMTP)
+# 6. CORS 설정
+cors.allowed-origins=${CORS_ALLOWED_ORIGINS:http://localhost:3000}
+
+# 7. 서버 설정
+server.address=0.0.0.0
+server.port=8081
+
+# 8. Mail 설정 (Gmail SMTP)
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
 spring.mail.username=${MAIL_USERNAME}
@@ -40,20 +51,12 @@ spring.mail.password=${MAIL_PASSWORD}
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 spring.mail.properties.mail.smtp.starttls.required=true
-
-# 발신자 이름 설정
 mail.from.name=TrendStream
 mail.from.address=${MAIL_USERNAME}
 
-# 6. CORS 설정
-cors.allowed-origins=${CORS_ALLOWED_ORIGINS:http://localhost:3000}
+# 9. Actuator (헬스체크용)
+management.endpoints.web.exposure.include=health
+management.endpoint.health.show-details=always
 
-# 8. 데이터 보관 설정
+# 10. 데이터 보관 설정 (60일)
 data.retention.days=60
-
-# 6. [필수] 서버 네트워크 설정 (Bad address 해결용)
-server.address=localhost
-server.port=8081
-
-# .env 파일 로딩 설정
-spring.config.import=optional:file:.env[.properties]
