Add initialDelay to producers; use env Kafka/NAVER
Introduce a 60s initialDelay for scheduled producer tasks so consumers have time to join before producers emit messages. Make Kafka bootstrap servers configurable via spring.kafka.bootstrap-servers (@Value) and set consumer AUTO_OFFSET_RESET to "earliest". Externalize Naver keywords with a new NAVER_KEYWORDS env var (added to .env.example and docker-compose) and reference it in application-prod.properties. Changes touch multiple producer classes (added initialDelay to schedules), KafkaConfig, and deployment env/config files to support these runtime behaviors.

--- a/deploy/docker-compose.yml
+++ b/deploy/docker-compose.yml
@@ -11,6 +11,7 @@ services:
       DB_PASSWORD: ${DB_PASSWORD}
       NAVER_CLIENT_ID: ${NAVER_CLIENT_ID}
       NAVER_CLIENT_SECRET: ${NAVER_CLIENT_SECRET}
+      NAVER_KEYWORDS: ${NAVER_KEYWORDS:-백엔드,AI,클라우드}
       GEMINI_API_KEY: ${GEMINI_API_KEY}
       GROQ_API_KEY: ${GROQ_API_KEY}
       AI_PROVIDER: ${AI_PROVIDER:-groq}
