--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -21,7 +21,7 @@ spring.kafka.bootstrap-servers=kafka:9092
 naver.api.client-id=${NAVER_CLIENT_ID}
 naver.api.client-secret=${NAVER_CLIENT_SECRET}
 naver.api.url=https://openapi.naver.com/v1/search/news.json
-naver.api.keywords=백엔드,AI,클라우드,자바,여기어때
+naver.api.keywords=${NAVER_KEYWORDS:백엔드,AI,클라우드}
 
 # AI 분석 설정
 ai.provider=${AI_PROVIDER:groq}
