--- a/deploy/.env.example
+++ b/deploy/.env.example
@@ -1,6 +1,7 @@
 DB_PASSWORD=your_secure_password
 NAVER_CLIENT_ID=your_naver_client_id
 NAVER_CLIENT_SECRET=your_naver_client_secret
+NAVER_KEYWORDS=백엔드,claude,클라우드,자바,여기어때
 AI_PROVIDER=groq
 GROQ_API_KEY=your_groq_api_key
 GEMINI_API_KEY=your_gemini_api_key
